--- a/contact.html
+++ b/contact.html
@@ -262,6 +262,13 @@
 				<br>Behance: <a href="https://www.behance.net/zarahapiz" style="color:#F3F3F3;"><i style="color:#F0B719;">Zara Hapiz</i></a>
 				<br><a href="https://www.behance.net/gallery/169375621/Graphic-Design-Portfolio-2023"><div class="portfolio"><img src="artwork/ZARA'S PORTFOLIO 2023!-2.png" style="width:600px;margin-top:20px;" alt="image failed to load?!"></div></a>
 				<br><br>
+				<i>some of my previous works:</i>
+				<br>
+				<img src="POSTER-KEMERDEKAAN.gif" style="height:350px;margin-top:20px;" alt="image failed to load?!">
+				<img src="women's aid organisation-1.png" style="height:350px;margin-top:20px;margin-left:20px;" alt="image failed to load?!">
+				<img src="PETANQUE-POSTER.gif" style="height:350px;margin-top:20px;margin-left:20px;" alt="image failed to load?!">
+				<img src="kawad bsmm V4 (no ribbon)-1.png" style="height:350px;margin-top:20px;margin-left:20px;" alt="image failed to load?!">
+				<br><br>
 			</h4>
 	
 	
