--- a/index.html
+++ b/index.html
@@ -256,18 +256,21 @@
 			<h1 style="margin-left:50px;">
 			What’s up?
 			</h1><br>
-			<h4 style="text-align:justify;text-justify:inter-word;margin-left:50px;margin-right:50px;">
-				I’m <i style="color:#F0B719;">Zara Hapiz</i>, an artist, graphic designer, programmer, and amateur videographer. I like hip-hop music and Nintendo games.
-			<br>Anyway, this website is one of the displays of my talent, as I programmed this website myself! Have fun browsing &gt;:)
+			<h4 style="text-align:justify;text-justify:inter-word;margin-left:50px;margin-right:50px;background-color:#0A0A0A;padding:30px;border-radius:5px;">
+				I’m <i style="color:#F0B719;">Zara Hapiz</i>, an <i style="color:#2346F3;">artist</i>, <i style="color:#2346F3;">graphic designer</i>, and <i style="color:#2346F3;">amateur software engineer</i>. I like hip-hop music and Nintendo games.
+			<br>Anyway, this website is one of the displays of my talent, as <i style="color:#F0B719;">I programmed this website myself!</i> Have fun browsing &gt;:)
 			<br><p>LISTEN TO SOME TUNES!</p></h4>
-			<iframe style="border-radius:12px;margin-left:40px;margin-top:0;" src="https://open.spotify.com/embed/track/0PyJRNmJvJJ5OmffwQf5we?utm_source=generator" width="90%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-			<!--<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/54FJWt8YIA1IHjmUxuDxwi?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-			0WSEq9Ko4kFPt8yo3ICd6T?utm_source=generator&theme=0-->
+			<iframe style="border-radius:12px;margin-left:40px;margin-top:0;" src="https://open.spotify.com/embed/track/6SdQfCiVae1EXK1pQ6b92o?utm_source=generator" width="90%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+			<!--
+			0PyJRNmJvJJ5OmffwQf5we - State Fair
+			54FJWt8YIA1IHjmUxuDxwi - Praise God
+			6SdQfCiVae1EXK1pQ6b92o - Rendezvous
+			-->
 		</div></div><br>
 		<div class="row">
 			<div class="column">
 				<h1>Latest Project!</h1>
-				<h4 style="margin-top:30px;text-align:justify;text-justify:inter-word;margin-left:50px;margin-right:50px;"><a href="https://zaramysh.github.io/apple/" style="color:#08131C;background-color:#F3F3F3;">Imitation Apple iPhone 15 website</a>
+				<h4 style="margin-top:30px;text-align:justify;text-justify:inter-word;margin-left:50px;margin-right:50px;background-color:#0A0A0A;padding:30px;border-radius:5px;"><a href="https://zaramysh.github.io/apple/" style="color:#2346F3;"><b>Click me!</b></a>
 				<br><br>
 				This is an imitation Apple website I designed for a <i>future</i> iPhone 15. 
 				<br><i>PHOTOS DO NOT BELONG TO ME!</i></h4>
