--- a/store.html
+++ b/store.html
@@ -289,8 +289,21 @@
 		<br><i style="opacity:0.7;font-size:0.8em">Everything provided here is meant for PERSONAL USE ONLY :&#41;</i></h4>
 
 		<h2>Posters</h2>
+	
+		<div class="gallery">
+		<img src="artwork/Thats What They All Say - Jack Harlow.png" width="300px" alt="Thats What They All Say - Jack Harlow">
+		<div class="container">Thats What They All Say - Jack Harlow<br>
+		<div class="button"><a style="text-decoration:none;color:#f5f5f5;" href="https://drive.google.com/file/d/1qkMSQQqd12kk83oO2sefbLw-CN1a-t_j/view?usp=sharing" target="_blank">download PNG</a></div></div></div>	
 		
 		<div class="gallery">
+		<img src="artwork/Jackman. - Jack Harlow.png" width="300px" alt="Jackman. - Jack Harlow">
+		<div class="container">Jackman. - Jack Harlow<br>
+		<div class="button"><a style="text-decoration:none;color:#f5f5f5;" href="https://drive.google.com/file/d/1Km-xrH5UKkgZJS4Tnik5t94n5yYHHb41/view?usp=sharing" target="_blank">download PNG</a></div></div></div>	<div class="gallery">
+	
+		<img src="artwork/UTOPIA - Travis Scott.png" width="300px" alt="UTOPIA - Travis Scott">
+		<div class="container">UTOPIA - Travis Scott<br>
+		<div class="button"><a style="text-decoration:none;color:#f5f5f5;" href="https://drive.google.com/file/d/1GBeJ-XlNzZszKWfbTWScVMkeprvPQzY-/view?usp=sharing" target="_blank">download PNG</a></div></div></div>	<div class="gallery">
+	
 		<img src="artwork/BARBIE 2023.png" width="300px" alt="Barbie (2023)">
 		<div class="container">Barbie (2023)<br>
 		<div class="button"><a style="text-decoration:none;color:#f5f5f5;" href="https://drive.google.com/file/d/1vJ2bQ9a_vkyjCqvmT0rXGywp24T1do3_/view?usp=sharing" target="_blank">download PNG</a></div></div></div>	
