--- a/art gallery.html
+++ b/art gallery.html
@@ -369,6 +369,9 @@
 	<img id="img2022-2" src="artwork/pear-1.png" width="300px" height="300px" alt="Pear; acrylic on paper">
 	<div class="container">pear<br><h4>27/6/22</h4></div></div>
 	<div class="gallery">
+	<img id="img2022-3" src="artwork/save the animals.png" width="300px" height="300px" alt="Save The Animals">
+	<div class="container">save the animals<br><h4>9/5/22</h4></div></div>
+	<div class="gallery">
 	<img id="img2022-1" src="artwork/waktu senja-1.png" width="300px" height="300px" alt="Waktu Senja; acrylic on paper">
 	<div class="container">waktu senja<br><h4>31/3/22</h4></div></div>
 	
