--- a/store.html
+++ b/store.html
@@ -291,6 +291,11 @@
 		<h2>Posters</h2>
 	
 		<div class="gallery">
+		<img src="artwork/Bound 2 - Kanye West.png" width="300px" alt="Bound 2 - Kanye West">
+		<div class="container">Bound 2 - Kanye West<br>
+		<div class="button"><a style="text-decoration:none;color:#f5f5f5;" href="https://drive.google.com/file/d/1Ts5Iwqw2tZeaygdNhZvTI6QrUHaV66qm/view?usp=sharing" target="_blank">download PNG</a></div></div></div>	
+	
+		<div class="gallery">
 		<img src="artwork/Thats What They All Say - Jack Harlow.png" width="300px" alt="Thats What They All Say - Jack Harlow">
 		<div class="container">Thats What They All Say - Jack Harlow<br>
 		<div class="button"><a style="text-decoration:none;color:#f5f5f5;" href="https://drive.google.com/file/d/1qkMSQQqd12kk83oO2sefbLw-CN1a-t_j/view?usp=sharing" target="_blank">download PNG</a></div></div></div>	
