--- a/store.html
+++ b/store.html
@@ -291,6 +291,11 @@
 		<h2>Posters</h2>
 	
 		<div class="gallery">
+		<img src="artwork/A BOY IS A GUN - Tyler, The Creator.png" width="300px" alt="A BOY IS A GUN* - Tyler, The Creator">
+		<div class="container">A BOY IS A GUN* - Tyler, The Creator<br>
+		<div class="button"><a style="text-decoration:none;color:#f5f5f5;" href="https://drive.google.com/file/d/1axy8Xy7kT_FazMpwSvHt2uDLAXGrQnUF/view?usp=sharing" target="_blank">download PNG</a></div></div></div>	
+	
+		<div class="gallery">
 		<img src="artwork/Bound 2 - Kanye West.png" width="300px" alt="Bound 2 - Kanye West">
 		<div class="container">Bound 2 - Kanye West<br>
 		<div class="button"><a style="text-decoration:none;color:#f5f5f5;" href="https://drive.google.com/file/d/1Ts5Iwqw2tZeaygdNhZvTI6QrUHaV66qm/view?usp=sharing" target="_blank">download PNG</a></div></div></div>	
