--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 		font-size: 1.5em;
 		color: #F3F3F3;
 		margin: 35px;
-		background-color: black;
-		background-image: url("ZARA HAPIZ WEBSITE BG.png");
+		background-color: #0A0A0A;
 		background-repeat: repeat-y;
 		background-position: left top;
   		background-attachment: scroll;
 		background-size: cover;
 		cursor: default;
+		overflow-x: hidden;
 	}
 	h1 {
 		font-family: "degular-display", sans-serif;
@@ -47,6 +47,7 @@
 		font-weight: 300;
 	}
 	h4 {
+		font-family: "neue-haas-grotesk-text",sans-serif;
 		margin: 10px 0 10px 0;
 		font-weight: 500;
 		font-size: 1em;
@@ -60,11 +61,11 @@
 		width: 10px;
 	}
 	::-webkit-scrollbar-track {
-		background: #08131C;
+		background: #0A0A0A;
 	}
 	::-webkit-scrollbar-thumb {
 		background: #F26697;
-		border: 1px solid #08131C;
+		border: 1px solid #0A0A0A;
 	}
 	::-webkit-scrollbar-thumb:hover {
 		background: #2346F3;
@@ -105,7 +106,7 @@
 		font-size: 0.8em;
 		text-align: center;
 		background-color: #F0B719;
-		border-bottom: 1px solid #08131C;
+		border-bottom: 1px solid #0A0A0A;
 		overflow-x: hidden;
 		overflow-y: hidden;
 		height: 38px;
@@ -113,7 +114,7 @@
 		white-space: nowrap;
 	}
 	.ribbon-text {
-		color: #08131C;
+		color: #0A0A0A;
 		font-size: 1.4em;
   		animation: bannermove 10s linear infinite;
  		animation-play-state: running;
@@ -121,19 +122,46 @@
  		animation-direction: alternate-reverse;
 	}
 	@keyframes bannermove {
-  		0% 
-	{
-    transform: translate(0, 0);
-  	}
-  	100% {
-    transform: translate(-10%, 0);
-  }
-}
+		0% {
+		transform: translate(0, 0);
+		}
+		100% {
+		transform: translate(-10%, 0);
+		}
+	}
 	.ribbon-text:hover {
 		-webkit-animation-play-state:paused;
 		-moz-animation-play-state:paused;
 		-o-animation-play-state:paused;
 		animation-play-state:paused;
+	}
+	.carouselbg {
+		background-color: #2346F3;
+		margin: 0 -50px;
+		padding: -20px 0;
+	}
+	.carousel {
+		overflow: visible;
+		white-space: nowrap;
+		margin: 0;
+		font-family: "owners-narrow", sans-serif;
+		font-weight: 700;
+		font-style: normal;
+		font-size: 10em !important;
+		color: #0a0a0a;
+		font-size: 1.4em;
+  		animation: carouselmove 50s linear infinite;
+ 		animation-play-state: running;
+ 		-webkit-animation-play-state: running;
+ 		animation-direction: alternate;
+	}
+	@keyframes carouselmove {
+		0% {
+		transform: translate(0, 0);
+		}
+		100% {
+		transform: translate(-1030%, 0);
+		}
 	}
 	footer {
 		color: #F3F3F3;
@@ -151,6 +179,16 @@
 	.row {
 		display: flex;
 	}
+	.stickers {
+		animation-name: titleHover;
+		animation-duration: 3s;
+		animation-iteration-count: 1;
+	}
+	/*.stickers img:hover {
+		transform: rotate(-3deg);
+	}*/
+	
+	
 		/* responsive stuff */
 		@media screen and (max-width: 650px) {
 		html {
@@ -170,7 +208,7 @@
 			font-size: 6vw;
 		}
 		h4, h5 {
-			font-size: 5vw;
+			font-size: 4vw;
 		}
 		ul {
 			width: 50%;
@@ -194,7 +232,9 @@
 		width: 0px;
 		}
 		.topnav { 
-		background-color: #F3F3F3;
+			background-color: #F0B719;
+			border-radius: 5px;
+			z-index: 5;
 		}
 		.topnav a {display: none;}
   		.topnav a.icon {
@@ -215,6 +255,9 @@
 		i {
 			width: "40vw";
 		}
+			.stickers {
+				z-index: 0;
+			}
 	}
 </style>
 <!--END OF CSS CODES-->
@@ -242,41 +285,100 @@
 	<!--END OF HEADER STUFF-->
 	
 	
+		<div class="stickers">
+			<img src="STICKER-01.png" alt="" style="width:30%;display:block;margin-left:auto;margin-right:auto;margin-top: 50px;transform:rotate(-7deg);">
+			<img src="STICKER-02.png" alt="" style="width:15%;z-index:1;position:relative;left:57vw;bottom:15vw;transform:rotate(9deg);overflow:visible;">
+			<img src="STICKER-03.png" alt="" style="width:17%;z-index:1;position:relative;left:5vw;bottom:25vw;transform:rotate(4deg);overflow:visible;">
+			<img src="STICKER-04.png" alt="" style="width:17%;z-index:2;position:relative;left:-20vw;bottom:16vw;transform:rotate(-16deg);overflow:visible;">
+			<img src="STICKER-05.png" alt="" style="width:17%;z-index:2;position:relative;left:15vw;bottom:22vw;transform:rotate(7deg);overflow:visible;">
+			<img src="STICKER-06.png" alt="" style="width:17%;z-index:3;position:relative;left:8vw;bottom:14vw;transform:rotate(-3deg);overflow:visible;">
+			<img src="STICKER-07.png" alt="" style="width:17%;z-index:1;position:relative;left:75vw;bottom:45vw;transform:rotate(-2deg);overflow:visible;">
+			<img src="STICKER-08.png" alt="" style="width:17%;z-index:2;position:relative;left:-13vw;bottom:42vw;transform:rotate(-8deg);overflow:visible;">
+			<img src="STICKER-09.png" alt="" style="width:10%;z-index:4;position:relative;left:34vw;bottom:50vw;transform:rotate(-3deg);overflow:visible;">
+			<img src="STICKER-09.png" alt="" style="width:10%;z-index:4;position:relative;left:-16vw;bottom:34vw;transform:rotate(11deg);overflow:visible;">
+			<img src="STICKER-10.png" alt="" style="width:10%;z-index:4;position:relative;left:-50vw;bottom:33vw;transform:rotate(26deg);overflow:visible;">
+			<img src="STICKER-10.png" alt="" style="width:10%;z-index:4;position:relative;left:21vw;bottom:30vw;transform:rotate(11deg);overflow:visible;">
+		</div>
 	
-		<h1>
+		<h1 style="margin-top:-30vw;">
 			<i>Hi.</i><br>
 			</h1><h1 style="color:#F26697;"> I’m Zara Hapiz,</h1>
-			<h1>a designer + artist.
-		</h1>
-			<p><h2 style="color:#2346F3;">+ programmer!</h2></p>
+			<h1>a graphic designer + software engineer.
+		</h1><br><br>
+	
+		<div class="carouselbg">
+		<div class="carousel">
+		APA KHABAR? ! ٱلسَّلَامُ عَلَيْكُمْ 你好! HALLO! привет! WHAT'S UP? SALUT! Γειά σου! ALOHA! こんにちは! HALLÅ! 안녕하세요! XIN CHÀO! HEY! ¡HOLA! வணக்கம்! สวัสดี!
+		</div>
+		</div>
+	
 		<br><br>
 		<div class="row">
-		<div class="column"><img src="artwork/JUGGERNAUT square.png" width="100%" alt="oh no picture gone :(" style="border-radius:5px;border: 2px solid black;"></div>
 		<div class="column">
-			<h1 style="margin-left:50px;">
-			What’s up?
-			</h1><br>
-			<h4 style="text-align:justify;text-justify:inter-word;margin-left:50px;margin-right:50px;background-color:#0A0A0A;padding:30px;border-radius:5px;">
-				I’m <i style="color:#F0B719;">Zara Hapiz</i>, an <i style="color:#2346F3;">artist</i>, <i style="color:#2346F3;">graphic designer</i>, and <i style="color:#2346F3;">amateur software engineer</i>. I like hip-hop music and Nintendo games.
-			<br>Anyway, this website is one of the displays of my talent, as <i style="color:#F0B719;">I programmed this website myself!</i> Have fun browsing &gt;:)
-			<br><p>LISTEN TO SOME TUNES!</p></h4>
-			<iframe style="border-radius:12px;margin-left:40px;margin-top:0;" src="https://open.spotify.com/embed/track/6SdQfCiVae1EXK1pQ6b92o?utm_source=generator" width="90%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+			<img src="artwork/JUGGERNAUT square.png" width="100%" alt="oh no picture gone :(">
+			JUGGERNAUT (feat. Lil Uzi Vert &amp; Pharrell Williams) - Tyler, The Creator [POSTER]
+		</div>
+		<div class="column">
+			<h4 style="text-align:justify;text-justify:inter-word;padding:30px;">
+				<i style="color:#F26697">WHAT’S UP?</i> My name’s Zara Hapiz. I’m a graphic designer, software engineer, and much more. You could possibly call me a jack of all trades. I’m really into hip hop, rap, and R&amp;B music, Nintendo video games, and sneakers.
+				<br><br>
+				I currently study pure Sciences and Computer Science at a secondary level. This website may be a display of my skill, considering I programmed and designed it myself. Nevertheless, I hope you enjoy browsing. <i style="color:#F26697">THANK YOU! :p</i>
+				<br><br><iframe style="border-radius:12px;margin-top:0;" src="https://open.spotify.com/embed/track/0PyJRNmJvJJ5OmffwQf5we?utm_source=generator" width="90%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></h4>
 			<!--
 			0PyJRNmJvJJ5OmffwQf5we - State Fair
 			54FJWt8YIA1IHjmUxuDxwi - Praise God
 			6SdQfCiVae1EXK1pQ6b92o - Rendezvous
+			3DK6m7It6Pw857FcQftMds - Runaway
 			-->
-		</div></div><br>
+		</div></div><br><br><br>
+		<h1 style="font-family:'owners-narrow',sans-serif;font-weight:700;font-style:normal;font-size:15vw!important;text-align:center;color:#F0B719;">PROLOGUE!</h1>
+		<h4 style="text-align:justify;text-justify:inter-word;padding:30px;">
+			Alright, first and foremost, I’d like to thank my parents. My mum and dad. Without them, I wouldn’t be here, both figuratively and literally. My mum is awesome. She inspires me to achieve greater heights and has been nurturing and guiding me since birth. She inspired me to display my talents here. She’s like a real life Barbie. My dad, on the other hand, is the coolest person on earth. He pays for my design softwares, haha, but he also does other amazing things. I get my music taste from him. He inspired me to take my passion for computer science further, and now that’s my ambition. I’d also like to give an honourable mention to my younger siblings, Azeem and Mysha, who give me constant unconditional support.
+			<br><br>
+			I’d also like to thank Cikgu Rosila and Cikgu Hidayati. They’d been my Computer Science teachers throughout 2020-2022 and without them, this website wouldn’t exist, no joke. I wouldn’t know how to code at all without them. The idea of coding my own website wouldn’t even cross my mind without them. 
+			<br><br>
+			Last, but definitely not least, I’d like to express my appreciation towards my amazing friends. Adam, Afina, Airel, Airin, Aishah, Aleesya, Alisha, Aliya, Alyssa, Azeem, Cassandra, Hamzah, Lakhiesa, Lara, Ranjit, Syarafina, Uwais, just to name a few. You guys motivate me to embrace my talents and skills, and I truly wouldn’t be me without all of you.
+		</h4><br><br><br>
 		<div class="row">
 			<div class="column">
-				<h1>Latest Project!</h1>
-				<h4 style="margin-top:30px;text-align:justify;text-justify:inter-word;margin-left:50px;margin-right:50px;background-color:#0A0A0A;padding:30px;border-radius:5px;"><a href="https://zaramysh.github.io/apple/" style="color:#2346F3;"><b>Click me!</b></a>
+				<h1>Latest Projects!</h1>
+				<h4 style="margin-top:30px;text-align:justify;text-justify:inter-word;padding:30px;"><a href="https://zaramysh.github.io/apple/" style="color:#2346F3;" target="_blank"><b>Click me to visit Zara’s Apple website!</b></a>
 				<br><br>
-				This is an imitation Apple website I designed for a <i>future</i> iPhone 15. 
-				<br><i>PHOTOS DO NOT BELONG TO ME!</i></h4>
+				I was tasked with a school project to design a future smartphone device. This is a faux Apple website I programmed for the then-upcoming iPhone 15 before its release. 
+				<br><br>The <i>real</i> iPhone 15 was just released and not many of my predictions were accurate.
+				<br><br><i>PHOTOS DO NOT BELONG TO ME!</i>
+				<br><br><iframe style="border-radius:12px;margin-top:0;" src="https://open.spotify.com/embed/track/3DK6m7It6Pw857FcQftMds?utm_source=generator" width="90%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></h4>
+			<!--
+			0PyJRNmJvJJ5OmffwQf5we - State Fair
+			54FJWt8YIA1IHjmUxuDxwi - Praise God
+			6SdQfCiVae1EXK1pQ6b92o - Rendezvous
+			3DK6m7It6Pw857FcQftMds - Runaway
+			-->
 			</div>
 			<div class="column">
-				<img src="artwork/iPhone 15 - 1.png" width="100%" alt="oh no picture gone :(" style="border-radius:5px;border:2px solid black;">
+				<img src="artwork/SMARTPHONE POSTER square!.png" width="100%" alt="oh no picture gone :(">
+				“Future” iPhone 15 by Zara [POSTER] (Not affiliated with Apple)
+			</div>
+		</div>
+		<div class="row">
+			<div class="column">
+				<img src="artwork/ENGLISH 1.png" width="100%" alt="oh no picture gone :(">
+				<i>Montigo</i> Ace Bottle [POSTER] (Not affiliated with Montigo)
+			</div>
+			<div class="column">
+				<h4 style="margin-top:30px;text-align:justify;text-justify:inter-word;padding:30px;">
+					I received this Montigo Ace Bottle in Sunset Coral as a gift for my birthday this year and it’s such a game-changer, man..
+					<br><br> It keeps my water cool all day. I know this sounds like an advertisement, but I promise Montigo doesn’t even know I exist. I just really like their products.
+				<br><br><iframe style="border-radius:12px;margin-top:0;" src="https://open.spotify.com/embed/track/1ofhfV90EnYhEr7Un2fWiv?utm_source=generator" width="90%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<br><br> P.S. All my posters are geared towards the future. I have no idea why. Apparently I’m a psychic.
+				</h4>
+			<!--
+			1ofhfV90EnYhEr7Un2fWiv - Changes
+			0PyJRNmJvJJ5OmffwQf5we - State Fair
+			54FJWt8YIA1IHjmUxuDxwi - Praise God
+			6SdQfCiVae1EXK1pQ6b92o - Rendezvous
+			3DK6m7It6Pw857FcQftMds - Runaway
+			-->
 			</div>
 		</div>
 	
