--- a/art gallery.html
+++ b/art gallery.html
@@ -19,12 +19,12 @@
 		color: #F3F3F3;
 		margin: 35px;
 		background-color: #0A0A0A;
-		background-image: url("ZARA HAPIZ WEBSITE BG.png");
 		background-repeat: repeat-y;
 		background-position: left top;
   		background-attachment: scroll;
 		background-size: cover;
 		cursor: default;
+		overflow-x: hidden;
 	}
 	h1 {
 		font-family: "degular-display", sans-serif;
@@ -47,6 +47,7 @@
 		font-weight: 300;
 	}
 	h4 {
+		font-family: "neue-haas-grotesk-text",sans-serif;
 		margin: 10px 0 10px 0;
 		font-weight: 500;
 		font-size: 1em;
@@ -60,11 +61,11 @@
 		width: 10px;
 	}
 	::-webkit-scrollbar-track {
-		background: #08131C;
+		background: #0A0A0A;
 	}
 	::-webkit-scrollbar-thumb {
 		background: #F26697;
-		border: 1px solid #08131C;
+		border: 1px solid #0A0A0A;
 	}
 	::-webkit-scrollbar-thumb:hover {
 		background: #2346F3;
@@ -151,6 +152,21 @@
 	.row {
 		display: flex;
 	}
+	table {
+		border: 1px solid #F3F3F3;
+		width: 105%;
+		overflow: visible;
+		margin-left: -35px;
+		padding: 0;
+		border-collapse: collapse;
+	}
+	tr {
+		border: 1px solid #F3F3F3;
+	}
+	td {
+		border: 1px solid #F3F3F3;
+		padding: 0 20px;
+	}
 		/* responsive stuff */
 	@media screen and (max-width: 650px) {
 		html {
@@ -170,7 +186,7 @@
 			font-size: 6vw;
 		}
 		h4, h5 {
-			font-size: 5vw;
+			font-size: 4vw;
 		}
 		ul {
 			width: 50%;
@@ -194,7 +210,9 @@
 		width: 0px;
 		}
 		.topnav { 
-		background-color: #F3F3F3;
+			background-color: #F0B719;
+			border-radius: 5px;
+			z-index: 5;
 		}
 		.topnav a {display: none;}
   		.topnav a.icon {
@@ -222,22 +240,19 @@
 		margin: auto;
   		display: block;
 		cursor: pointer;
-		border-top-left-radius: 5px;
-		border-top-right-radius: 5px;
 	}
 	.gallery {
 		display: inline-block;
 		margin-right: 65px;
   		width: 300px;
-  		background-color: #F3F3F3;
+  		background-color: #0a0a0a;
   		height: 440px;
-		border: 1px solid #08131C;
-		color: #2346F3;
+		border: 1px solid #F3F3F3;
+		color: #F3F3F3;
 		overflow: visible;
 		margin-bottom: 65px;
 		text-align: left;
 		vertical-align: top;
-		border-radius: 5px;
 	}
 	.container {
 		padding: 10px 15px 0px 15px;
@@ -318,15 +333,19 @@
 	
 	
 <!--MAIN!!!!-->	
-	<div class="green-bg">
-		<h1>
-			Zara’s
-			<p style="color:#F21F1F;margin:0;"> art gallery<i>!</i></p>
-		</h1><br>
-		<h3>
-			My drawings and stuff. Check it out.
-		</h3>
-	</div>
+	<br>
+		<table>
+		<tr>
+			<td><h1 style="font-family:'owners-narrow',sans-serif;font-weight:700;font-style:normal;font-size:15vw;margin-top:20px;">ART GALLERY</h1></td>
+			<td style="background-color:#F3F3F3;"><!--<h1 style="color:#0A0A0A;vertical-align:top;text-align:justify;text-justify:inter-word;margin-left:-3px;">ARTWORK<i>!</i></h1>-->
+			<h4 style="color:#0A0A0A;vertical-align:top;text-align:justify;text-justify:inter-word;">
+				Artwork by me. 
+				<br>Mostly graphite.
+				<br>Enjoy!
+			</h4>
+			</td>
+		</tr>
+		</table>
 	
 	<!---2023--->
 	<h2 style="color:#F0B719;"><p>2023</p></h2>
@@ -405,7 +424,6 @@
 		<a href="https://www.instagram.com/zaramysh/"><img src="instagram.png" style="width:30px;display:inline-block;" alt="Instagram"></a>
 		<a href="https://www.tiktok.com/@zaramysh"><img src="tik-tok.png" style="width:30px;display:inline-block;" alt="TikTok"></a>
 		<p>© Zara Hapiz 2023</p>
-		<p style="font-size:0.7em;">Special thanks to Cikgu Hidayati and Cikgu Rosila, my Computer Science teachers, for helping this website come to life.</p>
 		
 	</footer>
 	<!--END OF FOOTER STUFF-->
